Removed AsyncTask to use LoaderManager
It was easier to manage loaders from web services and SQLite using the same ReciclerView/Adapter/Activity. Manage between AsyncTaks and Loader was a nightmare.

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -9,6 +9,11 @@
 
     <item
         android:id="@+id/order_rating"
-        android:orderInCategory="1"
+        android:orderInCategory="2"
         android:title="@string/order_rating"/>
+
+    <item
+        android:id="@+id/order_favourite"
+        android:orderInCategory="3"
+        android:title="@string/order_favourite"/>
 </menu>
